update jupyter instructions